--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <link rel="stylesheet" href="{% static 'css/test_checkout.css' %}">
+    <link rel="stylesheet" href="{% static 'css/orders.css' %}">
 
 
     <!--[if lt IE 9]>
