Added order details page, login_req decorator to account views -> todo: fix URLs for order details, look into views and make conventional changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <link rel="stylesheet" href="{% static 'css/test_checkout.css' %}">
     <link rel="stylesheet" href="{% static 'css/orders.css' %}">
+    <link rel="stylesheet" href="{% static 'css/details.css' %}">
 
 
     <!--[if lt IE 9]>
