--- a/ecommerce_shop/static/css/orders.css
+++ b/ecommerce_shop/static/css/orders.css
@@ -68,7 +68,7 @@ body{margin-top:20px;}
 
 .steps .step.completed .step-icon-wrap::before,
 .steps .step.completed .step-icon-wrap::after {
-    background-color: #0da9ef
+    background-color: #0da9ef;
 }
 
 .steps .step.completed .step-icon {
