--- a/templates/order-details.html
+++ b/templates/order-details.html
@@ -1,66 +1,10 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block main_content %}
-    <div class="d-flex flex-column justify-content-center align-items-center" id="order-heading">
-        <div class="text-uppercase">
-            <p>Order detail</p>
-        </div>
-        <div class="h4">{{order.ordered_date}}</div>
-        <div class="pt-1">
-            <p>Order #{{ order.id }} is currently in status - <b class="text-dark"> {{order.delivery_status}}</b></p>
-        </div>
-    </div>
-    <div class="wrapper bg-white">
-        <div class="table-responsive">
-            <table class="table table-borderless">
-                <thead>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-        {% for item in order.items.all %}
-        <div class="d-flex justify-content-start align-items-center list my-2 py-1">
-            <div><b>{{item.quantity}}x</b></div>
-            <div class="order-item">{{item.item.item_info}}</div>
-        </div>
-        {% endfor %}
-        <div class="pt-2 border-bottom mb-3"></div>
-        <div class="d-flex justify-content-start align-items-center pl-3">
-            <div class="text-muted">Payment Method</div>
-            <div class="ml-auto"><img
-                    src="https://upload.wikimedia.org/wikipedia/en/e/eb/Stripe_logo%2C_revised_2016.png" alt=""
-                    width="40" height="40"> <label></label></div>
-        </div>
-        <div class="d-flex justify-content-start align-items-center py-1 pl-3">
-            <div class="text-muted">Shipping</div>
-            <div class="ml-auto"><label>Free</label></div>
-        </div>
-        <div class="d-flex justify-content-start align-items-center pl-3 py-3 mb-4 border-bottom">
-            <div class="text-muted"> Today's Total</div>
-            <div class="ml-auto h5"> ${{ order.tax_total_price }}</div>
-        </div>
-        <div class="row border rounded p-1 my-3">
-            <div class="col-md-6 py-3">
-                <div class="d-flex flex-column align-items start"><b>Billing Address</b>
-                    <p class="text-justify pt-2">{{ order.billing_address.street_address }}</p>
-                    <p class="text-justify">{{ order.billing_address.country }}</p>
-                </div>
-            </div>
-            <div class="col-md-6 py-3">
-                <div class="d-flex flex-column align-items start"><b>Shipping Address</b>
-                    <p class="text-justify pt-2">{{ order.billing_address.street_address }}</p>
-                    <p class="text-justify">{{ order.billing_address.country }}</p>
-                </div>
-            </div>
-        </div>
-        <div class="pl-3 font-weight-bold">Related Subsriptions</div>
-        <div class="d-sm-flex justify-content-between rounded my-3 subscriptions">
-            <div><b>#{{ order.id }}</b></div>
-            <div>{{ order.ordered_date }}</div>
-            <div>Status: {{order.delivery_status}}</div>
-            <div> Total: <b> ${{ order.tax_total_price }}</b></div>
-        </div>
-    </div>
-{% endblock %}
+</body>
+</html>
